--- a/env.example
+++ b/env.example
@@ -14,5 +14,5 @@ OPENAI_API_KEY="your_openai_api_key_here"
 # - Go to: https://myaccount.google.com/apppasswords
 # - Select "Mail" for the app and "Other" for the device.
 # - Use the 16-digit password it generates.
-EMAIL_SENDER="saumya15sept@gmail.com"
-EMAIL_PASSWORD="wyht qmia ejcu vlmg"
+EMAIL_SENDER="your_email_address_here"
+EMAIL_PASSWORD="your_gmail_app_password_here"
